reader/reader.css
html,
body {
    overflow: hidden;
    background-color: white;
    height: 100%;
    width: 100%;
    flex: 1;
    padding: 0 !important;
    margin: 0 !important;
    position: fixed;
}

body::before,
body::after {
    display: none !important;
    content: none !important;
    height: 0 !important;
}


html {
    overflow-y: hidden !important;
}

body {
    touch-action: auto;
    overscroll-behavior-x: none;
    overflow-x: auto;

}

@media screen and (max-width: 600px) {
    #wpadminbar {
        position: fixed !important;
        top: 0 !important;
    }
}



#ui-root {
    display: flex;
    all:initial;
    flex: 1;
        /* font-family: "Comic Sans MS", cursive; */

    font-family: Arial, Helvetica, sans-serif !important;
    line-height: 1.55;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.admin-bar #ui-root {
    top: 32px;
}

@media screen and (max-width: 782px) {
    .admin-bar #ui-root {
        top: 46px;
    }
}

#MainContainer {
    display: flex;
    position: absolute;
    left: 0;
    flex: 1;
    flex-direction: column;
    transition: left 0.2s ease;

}

#ThreeContainer {
    display: flex;
    background-color: green;
    position: absolute;
    top: 0;
    left: 10000px;
    /* height: 100px;
  width: 100px; */
    z-index: 122000;
    transition: left 0.2s ease;

}

canvas {
    display: flex;
    background-color: LightSlateGray;
    /*DarkSlateGray; */
    flex: 1
}

#flinks-canvas {
    /* display: none; */
    background-color: transparent;
    flex: 1;
    position: absolute;

    left: 0;
    right: 0;
    top: 50px;
    bottom: 0;

    pointer-events: none;
    z-index: 30000;
}


#middle-canvas-topDiv {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-bottom: 10px;
    width: 50px;
    /* padding-top: 4px; */
    flex-shrink: 0;
    color: #515152;

    background-color: rgba(233, 233, 233, 0.3);
    align-items: center;
    /* justify-content: space-around; */
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: rgba(37, 38, 39, 0.2);
    box-sizing: border-box;
    pointer-events: all;
}

#middle-space-div {
    display: flex;
    position: absolute;
    box-sizing: border-box;
    touch-action: auto;
    pointer-events: all;
}

#LinksListContainerDiv {
    display: none;
    position: absolute;
    flex-grow: 0;
    background-color: white;
    box-sizing: border-box;
    flex-direction: column;
    border-radius: 8px;
    width: 600px;
    /* height: 450px; */
    z-index: 40000;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
    pointer-events: all;

}

#LinksListTopRow {
    display: flex;
    height: 30px;
    margin-top: 10px;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 10px;
}

#LinksListTopRowLeftSortButtonContainer,
#LinksListTopRowRightSortButtonContainer {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
}

.LinksListSortButton {
    display: flex;
    justify-content: center;
    align-items: center;
}

#FlinksScrollDiv {
    display: flex;
    /* flex:1; */
    flex-direction: column;
    padding-top: 5px;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 30px;
    overflow-y: scroll;


}

.FlinksListOneRow {
    display: flex;
    height: 40px;
    margin-bottom: 15px;
    align-items: center;
}

.FlinkOneEndContainer {
    display: flex;
    flex: 1;
    color: rgba(37, 38, 39, 0.5);
    align-items: center;
    padding-left: 16px;
    padding-right: 8px;
    height: 40px;
    border-radius: 8px;
    background-color: rgba(37, 38, 39, 0.05);
    border-style: solid;
    border-width: 1px;
    border-color: rgba(37, 38, 39, 0.1);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    cursor: pointer;
}

.FlinkOneEndContainerBroken {
    border-style: dashed;
    border-width: 1px;
    border-color: rgba(246, 19, 19, 1);
}

.FlinksMiddleLineContainerDiv {
    display: flex;
    height: 40px;
    justify-content: center;
    align-items: center;
    width: 42px
}

.FlinksMiddleLineDiv {
    display: flex;
    height: 2px;
    width: 22px;
    margin-left: 10px;
    margin-right: 10px;
}

.FlinkPointCircle {
    width: 20px;
    height: 20px;
    border-radius: 10px;
    cursor: pointer;
}

.DeleteFlinkButton {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
}

#LinksListBottomRow {
    display: flex;
    /* width:100%; */
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 30px;
}


#LinksListModificationMessage{
    display: flex;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 30px;
}



.LinksListBottomRowMiddleSpacer{
    width:10px;
}

.OpacityResponsiveButton:hover {
    opacity: 0.5;
}

#overlay {
    position: absolute;
    top: 0;
    left: 0;
    flex: 1;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 2000;
    opacity: 0;
    /* background-color: red; */
    background-color: #D4D4D4;
    /* rgb(169, 169, 169); */
}

#bluroverlay {
    display: none;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 130000;
}

.CommonPupupTitle {
    font-family: 'Inter', sans-serif;
    font-size: 24px;
    font-weight: 700;
    color: rgba(51, 53, 64, 1);
    margin-top: 30px;
    margin-bottom: 20px;
}

.CommonPupupText {
    font-family: 'Inter', sans-serif;
    font-size: 18px;
    font-weight: 500;
    color: rgb(51, 53, 64);
    margin-top: 10px;
    margin-bottom: 30px;
}

.CommonInputContainer {
    display: flex;
    width: 100%;
    flex-direction: column;
    height: 72px;
}
/* ... */

